<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LichViet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="hour">GIỜ</string>
    <string name="ngay">NGÀY</string>
    <string name="thang">THÁNG</string>
    <string name="taosukien">Tạo sự kiện</string>
    <string name="chiase_lichngay">Chia sẻ</string>
    <string name="taosukien_lichngay">Tạo sự kiện</string>
    <string name="chitiet_lichngay">Chi tiết ngày</string>
    <string name="chonngaytot_lichngay">Chọn ngày tốt</string>
    <string name="doingay_lichngay">Đổi ngày</string>
    <string name="nnnx_lichngay">Ngày này năm xưa</string>
    <string name="homnay">Hôm nay</string>


    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="sukien">Sự kiện</string>
    <string name="viechi">Việc hỷ</string>
    <string name="ngaygio">Ngày giỗ</string>
    <string name="canhan">Cá nhân</string>
    <string name="giadinh">Gia đình</string>
    <string name="congviec">Công việc</string>
    <string name="sinhnhat">Sinh nhật</string>
    <string name="henho">Hẹn hò</string>
    <string name="kiniem">Kỉ niệm</string>
    <string name="khac">Khác</string>
    <string name="ngayram">Ngày Rằm, Mùng Một</string>
    <string name="ngayle">Ngày Lễ, Kỉ niệm Việt Nam</string>
    <string name="mail">Tài khoản</string>
    <string name="chuataosukien">Chưa tạo sự kiện nào</string>
    <string name="haytaosukien">Hãy tạo sự kiện mới bằng cách nhấn vào nút (+) phía trên cùng góc bên phải</string>


    <string name="titeltuvi">Tử vi bói toán</string>
    <string name="xemngaytot">Xem ngày tốt</string>
    <string name="xemngaycattuong">Giúp bạn tra cứu ngày cát tường để làm các việc đại sự.</string>
    <string name="xemtuvi">Xem tử vi</string>
    <string name="xemvanmenh"><![CDATA[Lá số tử vi & xem vận mệnh]]></string>


    <string name="tuvi2019_mota">Dự đoán Tử vi-Bói toán mang tính chất tham khảo,giúp bạn có những quyết định hợp lý để thu lại kết quả tốt nhất cho mình.</string>


    <string-array name="english_week_string_array">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string-array name="chinese_week_string_array">
        <item>CN</item>
        <item>T2</item>
        <item>T3</item>
        <item>T4</item>
        <item>T5</item>
        <item>T6</item>
        <item>T7</item>
    </string-array>

    <string name="list_dialog_title">Dynamic Update</string>

    <string name="func_dialog_title">Function</string>

    <string-array name="list_dialog_items">
        <item>Change week start with sun</item>
        <item>Change week start with mon</item>
        <item>Change week start with sat</item>
        <item>Change select mode：single/default</item>
        <item>Change month and week view with CustomView</item>
        <item>MonthViewShowMode：all</item>
        <item>MonthViewShowMode：only_current</item>
        <item>MonthViewShowMode：fix</item>
    </string-array>

    <string-array name="func_dialog_items">
        <item>Expand CalendarLayout</item>
        <item>Shrink CalendarLayout</item>
        <item>scrollToPre</item>
        <item>scrollToNext</item>
        <item>scrollToCurrent</item>
        <item>Limit calendar range</item>
        <item>Show range</item>
    </string-array>


    <string name="flyme">Flyme</string>
    <string name="flyme_desc">Meizu mobile phone calendar</string>

    <string name="custom_china">Beautiful Chinese style</string>
    <string name="custom_china_desc">Beautiful Chinese style custom</string>

    <string name="full">Full screen style</string>
    <string name="full_desc">If you need a full screen calendar</string>

    <string name="range">Range selection</string>
    <string name="range_desc">Range selection style if you need</string>

    <string name="multi">Multiple selection</string>
    <string name="multi_desc">Multiple selection style if you need</string>

    <string name="colorful">Colorful style</string>
    <string name="colorful_desc">Everything what you need</string>

    <string name="view_pager">ViewPager style</string>
    <string name="view_pager_desc">ViewPager content </string>

    <string name="single">Radio style</string>
    <string name="single_desc">Radio style may be very popular</string>

    <string name="progress">Progress bar style</string>
    <string name="progress_desc">If you are developing a todo application</string>

    <string name="index">Subscript style</string>
    <string name="index_desc">Everything depends on how you draw</string>

    <string name="galaxy">Galaxy style</string>
    <string name="galaxy_desc">So easy to customize</string>

    <string name="simple">Simple style</string>
    <string name="simple_desc">Simple calendar</string>
    <string-array name="lunar_first_of_month">
        <item>Tết </item>
        <item>Tháng 2</item>
        <item>Tháng 3</item>
        <item>Tháng 4</item>
        <item>Tháng 5</item>
        <item>Tháng 6</item>
        <item>Tháng 7</item>
        <item>Tháng 8</item>
        <item>Tháng 9</item>
        <item>Tháng 10</item>
        <item>Tháng 11</item>
        <item>Tháng 12</item>
    </string-array>

    <string-array name="tradition_festival">
        <item>Năm mới</item>
        <item>0101Tết</item>
        <item>0115Nguyên Tiêu</item>
        <item>0505Đoan ngọ</item>
        <item>0707Thất tịch</item>
        <item>0815Trung Thu</item>
        <item>0909Trùng cửu</item>
    </string-array>

    <string-array name="lunar_str">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

    <string-array name="solar_festival" tools:ignore="InconsistentArrays">
        <item>0101Tết</item>
        <item>0214Valentine</item>
        <item>0308Ngày phụ nữ</item>
        <item>0430Giải phóng</item>
        <item>0315Nguyên tiêu</item>
        <item>0401Cá tháng tư</item>
        <item>0501Quốc tế lao động</item>
        <item>0601Tết thiếu nhi</item>
        <item>0902 Quốc khánh</item>
        <item>1222TL Quân đội</item>
        <item>1120Nhà giáo</item>
        <item>0727Liệt sỹ</item>
        <item>1031Halloween</item>
        <item>1111Độc thân</item>
        <item>1224Giáng sinh</item>
        <item>1225Noel</item>
    </string-array>

    <string-array name="solar_term">
        <item>Xuân phân</item>
        <item>Tết thanh minh</item>
        <item>Cốc vũ</item>
        <item>Lập hạ</item>
        <item>Tiểu mãn</item>
        <item>Mang chủng</item>
        <item>Hạ chí</item>
        <item>Tiểu thử</item>
        <item>Đại thử</item>
        <item>Lập thu</item>
        <item>Xử thử</item>
        <item>Bạch lộ</item>
        <item>Thu phân</item>
        <item>Hàn lộ</item>
        <item>Sương giáng</item>
        <item>Lập đông</item>
        <item>Tiểu thuyết</item>
        <item>Đại tuyết</item>
        <item>Đông chí</item>
        <item>Tiểu hàn</item>
        <item>Đại hàn</item>
        <item>Lập xuân</item>
        <item>Vũ thủy</item>
        <item>Kinh trập</item>
    </string-array>

    <string-array name="special_festivals">
        <item>Me Day</item>
        <item>Cha Day</item>
        <item>Thank</item>
    </string-array>

    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>

    <string-array name="week_string_array">

        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>

        <item>CN</item>
        <item>Hai</item>
        <item>Ba</item>
        <item>Tư</item>
        <item>Năm</item>
        <item>Sáu</item>
        <item>Bảy</item>

    </string-array>

    <string-array name="year_view_week_string_array">
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
    </string-array>

    <string-array name="month_string_array">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>

    <integer-array name="trunk_integer_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </integer-array>

    <string-array name="trunk_string_array">
        <item>Tân</item>
        <item>Nhâm</item>
        <item>Quý</item>
        <item>Giáp</item>
        <item>Ất</item>
        <item>Bính</item>
        <item>Đinh</item>
        <item>Mậu</item>
        <item>Kỷ</item>
        <item>Canh</item>
    </string-array>

    <integer-array name="branch_integer_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </integer-array>

    <string-array name="branch_string_array">
        <item>Tý</item>
        <item>Sửu</item>
        <item>Dần</item>
        <item>Mão</item>
        <item>Thìn</item>
        <item>Tỵ</item>
        <item>Ngọ</item>
        <item>Mùi</item>
        <item>Thân</item>
        <item>Dậu</item>
        <item>Tuất</item>
        <item>Hợi</item>

    </string-array>


    <string name="sukiencanhan">SỰ KIỆN CÁ NHÂN (lỊCH VIỆT)</string>
    <string name="dongbosukiengg">ĐỒNG BỘ SỰ KIÊN GOOGLE</string>
    <string name="themtaikhoan">Thêm tài khoản</string>

    <string name="canhanhoatrangchu">Chức năng \"Sửa trang chủ\" giúp bạn có thể cá nhân hóa thông tin trang chủ tùy theo mục đích sử dụng của mình. Bạn có thể cài đặt Lịch ngày làm trang mặc định khi mở app, cài đặt hiển thị lịch ngày tháng trên trang chủ và ẩn các thẻ tính năng không sử dụng giúp cho ứng dụng chạy nhanh hơn, tối ưu hơn. Đây là một tính năng của bản lịch việt Pro</string>

>>>>>>> developer
</resources>
