<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="Sự kiện"
        >
        <menu>
            <item
                android:id="@+id/nav_sukien"
                android:icon="@drawable/tao_sukien_timkiem"
                android:title="@string/sukien" />
        </menu>
    </item>

    <item android:title="LỊCH CÁ NHÂN">
        <menu>
            <item
                android:id="@+id/nav_viechy"
                android:icon="@drawable/tao_sukien_viechy"
                android:title="@string/viechi" />
            <item
                android:id="@+id/nav_ngaygio"
                android:icon="@drawable/tao_sukien_ngaygio"
                android:title="@string/ngaygio" />
            <item
                android:id="@+id/nav_canhan"
                android:icon="@drawable/sukien_canhan"
                android:title="@string/canhan" />
            <item
                android:id="@+id/nav_giadinh"
                android:icon="@drawable/tao_sukien_giadinh"
                android:title="@string/giadinh" />
            <item
                android:id="@+id/nav_congviec"
                android:icon="@drawable/tao_sukien_congviec"
                android:title="@string/congviec" />
            <item
                android:id="@+id/nav_sinhnhat"
                android:icon="@drawable/tao_sukien_sinhnhat"
                android:title="@string/sinhnhat" />
            <item
                android:id="@+id/nav_henho"
                android:icon="@drawable/tao_sukien_henho"
                android:title="@string/henho" />
            <item
                android:id="@+id/nav_kiniem"
                android:icon="@drawable/tao_sukien_kyniem"
                android:title="@string/kiniem" />
            <item
                android:id="@+id/nav_khac"
                android:icon="@drawable/tao_sukien_khac"
                android:title="@string/khac" />

        </menu>
    </item>

    <item android:title="LỊCH SỰ KIỆN">
        <menu>
            <item
                android:id="@+id/nav_ngayram"
                android:icon="@drawable/tao_sukien_ngayle"
                android:title="@string/ngayram" />
            <item
                android:id="@+id/nav_ngayle"
                android:icon="@drawable/tao_sukien_ngayle"
                android:title="@string/ngayle" />
        </menu>
    </item>

    <item android:title="ĐỒNG BỘ LỊCH FACEBOOK/GOOGLE">
        <menu>
            <item
                android:id="@+id/nav_mail"
                android:icon="@drawable/tao_sukien_taikhoan"
                android:title="@string/mail" />
        </menu>
    </item>
</menu>