<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    tools:context=".activity.TaoSuKienActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:title="Tạo sự kiện mới"
            app:titleTextColor="@color/colorWhite"
            android:background="@color/colorLightBlue"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_margin="10dp"
            android:text="@string/sukiencanhan"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="#ffffff"
                    android:clickable="true"
                    android:drawableStart="@drawable/tao_sukien_viechy"
                    android:drawablePadding="15dp"
                    android:layout_margin="1dp"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:paddingLeft="15dp"
                    android:text="@string/viechi"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="#ffffff"
                    android:drawableStart="@drawable/tao_sukien_giadinh"
                    android:drawablePadding="15dp"
                    android:layout_margin="1dp"
                    android:textAllCaps="false"
                    android:paddingLeft="15dp"
                    android:textAlignment="textStart"
                    android:text="@string/giadinh"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="#ffffff"
                    android:drawableStart="@drawable/tao_sukien_henho"
                    android:drawablePadding="15dp"
                    android:paddingLeft="15dp"
                    android:textAllCaps="false"
                    android:layout_margin="1dp"
                    android:textAlignment="textStart"
                    android:text="@string/henho"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="#ffffff"
                    android:drawableStart="@drawable/tao_sukien_canhan"
                    android:drawablePadding="15dp"
                    android:paddingLeft="15dp"
                    android:textAllCaps="false"
                    android:layout_margin="1dp"
                    android:textAlignment="textStart"
                    android:text="@string/canhan"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="#ffffff"
                    android:drawableStart="@drawable/tao_sukien_khac"
                    android:drawablePadding="15dp"
                    android:paddingLeft="15dp"
                    android:textAllCaps="false"
                    android:layout_margin="1dp"
                    android:textAlignment="textStart"
                    android:text="@string/khac"/>


            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:drawableStart="@drawable/tao_sukien_ngaygio"
                    android:drawablePadding="15dp"
                    android:paddingLeft="15dp"
                    android:layout_margin="1dp"
                    android:textAllCaps="false"
                    android:background="#ffffff"
                    android:textAlignment="textStart"
                    android:text="@string/ngaygio"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="#ffffff"
                    android:drawableStart="@drawable/tao_sukien_congviec"
                    android:drawablePadding="15dp"
                    android:paddingLeft="15dp"
                    android:textAllCaps="false"
                    android:layout_margin="1dp"
                    android:textAlignment="textStart"
                    android:text="@string/congviec"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="#ffffff"
                    android:drawableStart="@drawable/tao_sukien_sinhnhat"
                    android:drawablePadding="15dp"
                    android:paddingLeft="15dp"
                    android:layout_margin="1dp"
                    android:textAllCaps="false"
                    android:textAlignment="textStart"
                    android:text="@string/sinhnhat"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="#ffffff"
                    android:drawableStart="@drawable/tao_sukien_kyniem"
                    android:drawablePadding="15dp"
                    android:paddingLeft="15dp"
                    android:textAllCaps="false"
                    android:layout_margin="1dp"
                    android:textAlignment="textStart"
                    android:text="@string/kiniem"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_margin="10dp"
            android:text="@string/dongbosukiengg"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#ffffff"
            android:drawableStart="@drawable/tao_sukien_kyniem"
            android:drawablePadding="15dp"
            android:paddingLeft="15dp"
            android:textAllCaps="false"
            android:layout_margin="1dp"
            android:textAlignment="textStart"
            android:text="@string/themtaikhoan"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>