<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"

    android:layout_height="match_parent">
    <TextView
        android:text="@string/titeltuvi"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
<RelativeLayout
    android:layout_marginTop="10dp"
    android:background="@drawable/bgr_goodday"
    android:layout_width="match_parent"
    android:layout_height="90dp">
<ImageView
    android:id="@+id/img"
    android:src="@drawable/btn_chonngaytot_lichngay"
    android:layout_width="50dp"
    android:layout_marginTop="15dp"
    android:layout_marginLeft="20dp"
    android:layout_height="50dp"/>
    <LinearLayout
        android:id="@+id/linearLayout2"
      android:layout_toRightOf="@+id/img"
        android:layout_toLeftOf="@+id/img1"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/xemngaytot"
            android:layout_width="wrap_content"
            android:textSize="6pt"
            android:layout_marginTop="15dp"
            android:textColor="@color/with"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/xemngaycattuong"
            android:layout_width="200dp"
            android:textSize="5pt"
            android:textColor="@color/with"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <ImageView
       android:layout_alignParentRight="true"
        android:id="@+id/img1"
        android:src="@drawable/pro"
        android:layout_width="60dp"

        android:layout_marginRight="15dp"
        android:layout_height="60dp"/>
</RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:background="@drawable/bgr_goodday"
        android:layout_width="match_parent"
        android:layout_height="90dp">
        <ImageView
            android:id="@+id/img3"
            android:src="@drawable/i_tuvi"
            android:layout_width="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_height="50dp"/>
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_toRightOf="@+id/img3"
            android:layout_toLeftOf="@+id/img4"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/xemtuvi"
                android:layout_width="wrap_content"
                android:textSize="6pt"
                android:layout_marginTop="15dp"
                android:textColor="@color/with"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/xemvanmenh"
                android:layout_width="200dp"
                android:textSize="5pt"
                android:textColor="@color/with"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <ImageView
            android:layout_alignParentRight="true"
            android:id="@+id/img4"
            android:src="@drawable/pro"
            android:layout_width="60dp"

            android:layout_marginRight="15dp"
            android:layout_height="60dp"/>
    </RelativeLayout>
    <GridView
        android:layout_marginTop="15dp"
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:numColumns="4"/>
</LinearLayout>