<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/margin_2"
    android:layout_marginLeft="@dimen/margin_2">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_taosukien">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_taosk_lichngay"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/taosukien_lichngay"
            android:textColor="@color/black"
            android:textSize="@dimen/margin_2"
            android:layout_marginLeft="@dimen/margin_3"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_chiase"
        android:layout_marginTop="@dimen/margin_2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_chiase_lichngay"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/chiase_lichngay"
            android:textColor="@color/black"
            android:textSize="@dimen/margin_2"
            android:layout_marginLeft="@dimen/margin_3"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_chitietngay"
        android:layout_marginTop="@dimen/margin_2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_chitietngay_lichngay"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/chitiet_lichngay"
            android:textColor="@color/black"
            android:textSize="@dimen/margin_2"
            android:layout_marginLeft="@dimen/margin_3"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_chonngaytot"
        android:layout_marginTop="@dimen/margin_2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_chonngaytot_lichngay"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/chonngaytot_lichngay"
            android:textColor="@color/black"
            android:textSize="@dimen/margin_2"
            android:layout_marginLeft="@dimen/margin_3"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_doingay"
        android:layout_marginTop="@dimen/margin_2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_doingay_lichngay"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/doingay_lichngay"
            android:textColor="@color/black"
            android:textSize="@dimen/margin_2"
            android:layout_marginLeft="@dimen/margin_3"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_nnnx"
        android:layout_marginTop="@dimen/margin_2"
        android:layout_marginBottom="@dimen/margin_2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/i_nnnx"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nnnx_lichngay"
            android:textColor="@color/black"
            android:textSize="@dimen/margin_2"
            android:layout_marginLeft="@dimen/margin_3"/>

    </LinearLayout>

</LinearLayout>